force-app/main/default/objects/Arroyo_Quote_Opportunity_matrix__mdt/Arroyo_Quote_Opportunity_matrix__mdt.object-meta.xml
<CustomObject>
    <label>Arroyo Quote-Opportunity matrix</label>
    <pluralLabel>Arroyo Quote-Opportunity matrix</pluralLabel>
</CustomObject>