force-app/main/default/objects/Arroyo_Quote_Opportunity_matrix__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>