force-app/main/default/objects/Arroyo_Quote_Opportunity_matrix__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <label>Source Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>QuoteLine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>