force-app/main/default/objects/Arroyo_Quote_Opportunity_matrix__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>