force-app/main/default/objects/Arroyo_Quote_Opportunity_matrix__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
            <value>
                <fullName>OpportunityLineItem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>